--- a/css/blue.css
+++ b/css/blue.css
@@ -175,7 +175,7 @@ h1 span {
 h2 {
 	width:195px;
 	height: 23px;
-	text-align: right;
+	text-align: center;;
 	float:left;
 	padding:0;
 	margin:0;
